--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         </title>
         <meta charset="UTF-8">
     </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        
+    <body bgcolor="e5e6e6">
+        <img src="https://res.cloudinary.com/dodufuifx/image/upload/v1749929828/Odin_Recipes_crc1dc.png" width="1897">
     </body>
 
 </html>
