Complete the Homepage
Add Anchors to all recipes & to github repository

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <title>
-            Recipes | Odin Project 1 
+            Recipes   |   Odin Project 1 
         </title>
         <meta charset="UTF-8">
     </head>
     <body bgcolor="e5e6e6">
-        <img src="https://res.cloudinary.com/dodufuifx/image/upload/v1749929828/Odin_Recipes_crc1dc.png" width="1897">
+        <br><br>
+        <img src="https://res.cloudinary.com/dodufuifx/image/upload/v1749979728/Background_image_credit_mydecorative.com_lhw28j.png" width="1898" alt="Odin Recipes">
+        &nbsp &nbsp &nbsp <font size="7"><a href="recipes/BlueLagoon.html" style="text-decoration:none">Blue Lagoon</a>  |  <a href="recipes/BlackForestCake.html" style="text-decoration:none">Black Forest Cake</a>  |  <a href="recipes/GrilledCheeseSandwich.html" style="text-decoration:none">Grilled Cheese Sandwich</a>  |  <a href="recipes/PotatoAuGratin.html" style="text-decoration:none">Potato Au Gratin</a>  |  <a href="recipes/EggFriedRice.html" style="text-decoration:none">Egg Fried Rice</a></font>
+        <br> 
+        <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+        <font size="5"><a href="https://www.github.com/samageet/recipes" style="color: black;">Made with <img src="https://res.cloudinary.com/dodufuifx/image/upload/v1750056495/pixel-heart-2779422_1280_ft6tpf.png" height="17"> by Samageet</font></a> </p>
     </body>
 
 </html>
