Finish Blue Lagoon Page

--- a/recipes/BlueLagoon.html
+++ b/recipes/BlueLagoon.html
@@ -4,7 +4,29 @@
         <meta charset="UTF-8">
         <title>Blue Lagoon Margarita</title>
     </head>
-    <body>
-        <h1>Blue Lagoon Margarita</h1>
+    <body bgcolor="e5e6e6">
+        <font size="6">---------------Blue Lagoon Margarita---------------</font>
+        <br>
+        <img src="https://images.unsplash.com/photo-1678007697738-47aac40f1501?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=dextar-vision-48Mt_adE6Ak-unsplash.jpg" width="620" alt="A glass containing Blue Lagoon Margarita">
+        <br><br>
+        <font size=5><em>A cool summer drink that looks good and goes down easy.</em></font>
+        <i><h2>Ingredients</h2>
+        <ul style="font-size: large;">
+            <li>Approximately 1 cup of ice (add more if you like it extra chilled)</li>
+            <li>2 fl oz of sour mix</li>
+            <li>1½ fl oz of pineapple juice</li>
+            <li>1¼ fl oz of tequila</li>
+            <li>1 fl oz of blue curaçao</li>
+            <li>½ fl oz of freshly squeezed lime juice</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol style="font-size: large;">
+            <li>Fill a blender with ice.</li>
+            <li>Add the sour mix, pineapple juice, tequila, blue curaçao, and lime juice.</li>
+            <li>Secure the lid and blend until the drink is completely smooth.</li>
+            <li>Serve immediately in chilled glasses.</li>
+        </ol>
+        <font size=4><a href="../index.html">Home</a></font>
+    </i>   
     </body>
 </html>
