Finish Black Forest cake webpage

--- a/recipes/BlackForestCake.html
+++ b/recipes/BlackForestCake.html
@@ -2,9 +2,43 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Jenny's Black Forest Cake</title>
+        <title>Black Forest Cake</title>
     </head>
-    <body>
-        <h1>Jenny's Black Forest Cake</h1>
+    <body bgcolor="e5e6e6">
+        <font size="6">------------------Black Forest Cake------------------</font>
+        <br>
+        <img src="https://images.unsplash.com/photo-1723476355253-88309fec88a4?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=emma-miller-JIf_rDVZCvQ-unsplash.jpg&w=640" width="620" alt="A glass containing Blue Lagoon Margarita">
+        <br><br>
+        <font size=5><em>A rich chocolate layer cake topped with sweet cherries delivering timeless indulgence.</em></font>
+        <i><h2>Ingredients</h2>
+        <ul style="font-size: large;">
+            <li>About 1 cup of milk</li>
+            <li>1 tablespoon white vinegar</li>
+            <li>1¾ cups plain (all‑purpose) flour</li>
+            <li>2 cups granulated sugar</li>
+            <li>¾ cup unsweetened cocoa powder</li>
+            <li>1 teaspoon baking powder</li>
+            <li>2 teaspoons baking soda</li>
+            <li>½ teaspoon salt</li>
+            <li>2 large eggs</li>
+            <li>½ cup neutral‑flavoured oil (e.g. vegetable)</li>
+            <li>1 cup cooled, strong brewed coffee</li>
+            <li>1 teaspoon pure vanilla extract</li>
+            <li>One 21‑oz tin of cherry pie filling</li>
+            <li>½ cup cherry‑flavoured liqueur</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol style="font-size: large;">
+            <li>Preheat the oven to 175 °C (350 °F) and grease two 20 cm (8 in) cake tins, then dust them with flour.</li>
+            <li>Combine the milk and vinegar in a small jug; set aside to curdle.</li>
+            <li>Sift together the flour, sugar, cocoa, baking powder, baking soda and salt into a bowl.</li>
+            <li>In a separate large bowl, whisk the eggs, oil, cold brewed coffee and vanilla extract, then stir in the curdled milk.</li>
+            <li>Gently fold the dry ingredients into the wet mixture, mixing until just combined.</li>
+            <li>Divide the batter evenly between the prepared tins and bake for about 30 minutes, or until a skewer inserted into the centre emerges clean.</li>
+            <li>Allow the cakes to cool fully in their tins before transferring to a wire rack.</li>
+            <li>For the filling, stir together the cherry pie filling and liqueur, then chill until ready to assemble.</li>
+        </ol>
+        <font size=4><a href="../index.html">Home</a></font>
+    </i>   
     </body>
 </html>
