Finish Grilled Cheese Sandwich webpage
Correct the alt text for the image in Black Forest Cake

--- a/recipes/BlackForestCake.html
+++ b/recipes/BlackForestCake.html
@@ -7,7 +7,7 @@
     <body bgcolor="e5e6e6">
         <font size="6">------------------Black Forest Cake------------------</font>
         <br>
-        <img src="https://images.unsplash.com/photo-1723476355253-88309fec88a4?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=emma-miller-JIf_rDVZCvQ-unsplash.jpg&w=640" width="620" alt="A glass containing Blue Lagoon Margarita">
+        <img src="https://images.unsplash.com/photo-1723476355253-88309fec88a4?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=emma-miller-JIf_rDVZCvQ-unsplash.jpg&w=640" width="620" alt="A slice of Black Forest Cake">
         <br><br>
         <font size=5><em>A rich chocolate layer cake topped with sweet cherries delivering timeless indulgence.</em></font>
         <i><h2>Ingredients</h2>
