--- a/recipes/GrilledCheeseSandwich.html
+++ b/recipes/GrilledCheeseSandwich.html
@@ -2,9 +2,37 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Grandma's Italian Grilled Cheese Sandwich</title>
+        <title>Grilled Cheese Sandwich</title>
     </head>
-    <body>
-        <h1>Grandma's Italian Grilled Cheese Sandwich</h1>
+    <body bgcolor="e5e6e6">
+        <font size="6">--------------Grilled Cheese Sandwich--------------</font>
+        <br>
+        <img src="https://images.unsplash.com/photo-1737513916865-63c7fd3b67a7?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=griffin-wooldridge-3AoHmfsKPa8-unsplash.jpg&w=640" width="620" alt="Ooey Gooey Cheesy Sandwich">
+        <br><br>
+        <font size=5><em>A warm, melty grilled cheese sandwich that brings you back home.</em></font>
+        <i><h2>Ingredients</h2>
+        <ul style="font-size: large;">
+            <li>2 slices of sourdough or white bread</li>
+            <li>1 slice sharp cheddar</li>
+            <li>1 slice mozzarella</li>
+            <li>1 slice smoked gouda or provolone (optional)</li>
+            <li>1 tablespoon butter</li>
+            <li>1 tablespoon mayonnaise</li>
+            <li>1 clove garlic (cut in half)</li>
+            <li>1-2 slices of tomato (optional)</li>
+            <li>Pinch of dried oregano or mixed Italian herbs</li>
+            <li>Salt and black pepper to taste</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol style="font-size: large;">
+            <li>Heat a skillet over medium heat.</li>
+            <li>Lightly rub the garlic clove on one side of each bread slice.</li>
+            <li>Spread mayonnaise on the inside of one slice. Layer the cheeses and tomato slices, then sprinkle a pinch of herbs, salt, and pepper.</li>
+            <li>Close the sandwich. Butter the outsides generously.</li>
+            <li>Place in the skillet. Press down lightly. Cook until golden and crisp, 2-3 minutes per side. Flip carefully.</li>
+            <li>Once both sides are golden and the cheese is melted, remove from the pan. Let rest for 1 minute, then slice and serve hot.</li>
+        </ol>
+        <font size=4><a href="../index.html">Home</a></font>
+    </i>   
     </body>
 </html>
