Finish Au Gratin Potatoes Webpage

--- a/recipes/PotatoAuGratin.html
+++ b/recipes/PotatoAuGratin.html
@@ -2,9 +2,38 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Creamy Au Gratin Potatoes</title>
+        <title>Au Gratin Potatoes</title>
     </head>
-    <body>
-        <h1>Creamy Au Gratin Potatoes</h1>
+    <body bgcolor="e5e6e6">
+        <font size="6">------------------Au Gratin Potatoes------------------</font>
+        <br>
+        <img src="https://pixabay.com/get/gdc5130b6594596eb4331d704ab19ac59159bcc1047ca4c58b27c229f17a4ed3f4cfaddc3b1c9bd2ee1149a0c0b5f6b0c2460da5512e8c5391aff9b6d47f183aff792b71ead37902b5532385d40f81d5d_640.png?attachment=" width="628" alt="A pan filled with creamy Au Gratin Potatoes">
+        <br><br>
+        <font size=5><em>Rich layers of soft potatoes coated in a velvety cheese sauce make this classic French dish irresistible.</em></font>
+        <i><h2>Ingredients</h2>
+        <ul style="font-size: large;">
+            <li>Russet potatoes</li>
+            <li>Onion rings</li>
+            <li>Salt and pepper</li>
+            <li>Butter</li>
+            <li>All-purpose flour</li>
+            <li>Milk</li>
+            <li>Shredded Cheddar</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol style="font-size: large;">
+            <li>Arrange half of the potato slices in a greased baking dish and lightly sprinkle with seasoning.</li>
+            <li>Distribute the onion rings evenly over the potato layer.</li>
+            <li>Place the remaining potatoes on top and season once more.</li>
+            <li>In a saucepan, melt the butter over medium heat.</li>
+            <li>Stir in the flour and salt, cooking for about a minute while mixing constantly.</li>
+            <li>Slowly pour in the milk, whisking steadily until the sauce thickens.</li>
+            <li>Add the grated cheese, stirring until it melts completely and the sauce is smooth.</li>
+            <li>Evenly pour the cheese sauce over the layered potatoes and onions.</li>
+            <li>Cover the dish with foil and bake at 175°C (350°F) until the potatoes are soft and the sauce is hot and bubbling.</li>
+
+        </ol>
+        <font size=4><a href="../index.html">Home</a></font>
+    </i>   
     </body>
 </html>
