Finish Egg Fried Rice webpage

--- a/recipes/EggFriedRice.html
+++ b/recipes/EggFriedRice.html
@@ -4,7 +4,35 @@
         <meta charset="UTF-8">
         <title>Egg Fried Rice</title>
     </head>
-    <body>
-        <h1>Egg Fried Rice</h1>
+    <body bgcolor="e5e6e6">
+        <font size="6">--------------------Egg Fried Rice--------------------</font>
+        <br>
+        <img src="https://pixabay.com/get/gab1bd66cc0e54032d74fe1a4306c8dfe3c6fc1852c15ada2e1c26b5d0e09d8f74852d245f53b1f20aa445bf81e08ce729d50932c38213b1c9e1e601c6664f91744bf176d155e0394f39a1d274cabc97d_640.jpg?attachment=" width="620" alt="Freshly cooked egg fried rice served on a white plate">
+        <br><br>
+        <font size=5><em>A savoury stir-fry of rice and eggs, ideal for a quick weekday supper or a late-night comfort meal..</em></font>
+        <i><h2>Ingredients</h2>
+        <ul style="font-size: large;">
+            <li>1 cup of water</li>
+            <li>2 tablespoons of soy sauce</li>
+            <li>½ teaspoon of salt</li>
+            <li>1 cup of quick-cook rice</li>
+            <li>1 teaspoon of cooking oil</li>
+            <li>½ finely chopped onion</li>
+            <li>½ cup of peas or chopped green beans</li>
+            <li>1 large egg, whisked</li>
+            <li>¼ teaspoon of black pepper</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol style="font-size: large;">
+            <li>Bring water, soy sauce, and salt to a boil in a saucepan.</li>
+            <li>Stir in the uncooked instant rice, cover, and remove from heat. Let it sit for 5 minutes.</li>
+            <li>Meanwhile, heat oil in a skillet over medium heat.</li>
+            <li>Sauté chopped onion and green beans until tender.</li>
+            <li>Push veggies aside and pour in the beaten egg; scramble until just cooked.</li>
+            <li>Add the softened instant rice, fluffing it into the mixture.</li>
+            <li>Season with black pepper and stir until everything is well combined and heated through.</li>
+        </ol>
+        <font size=4><a href="../index.html">Home</a></font>
+    </i>   
     </body>
 </html>
