Fix broken links in Fried Rice, Au Gratin pages

--- a/recipes/EggFriedRice.html
+++ b/recipes/EggFriedRice.html
@@ -7,7 +7,7 @@
     <body bgcolor="e5e6e6">
         <font size="6">--------------------Egg Fried Rice--------------------</font>
         <br>
-        <img src="https://pixabay.com/get/gab1bd66cc0e54032d74fe1a4306c8dfe3c6fc1852c15ada2e1c26b5d0e09d8f74852d245f53b1f20aa445bf81e08ce729d50932c38213b1c9e1e601c6664f91744bf176d155e0394f39a1d274cabc97d_640.jpg?attachment=" width="620" alt="Freshly cooked egg fried rice served on a white plate">
+        <img src="https://cdn.pixabay.com/photo/2021/12/29/23/59/pineapple-fried-rice-6902993_960_720.jpg" width="620" alt="Freshly cooked egg fried rice served on a white plate">
         <br><br>
         <font size=5><em>A savoury stir-fry of rice and eggs, ideal for a quick weekday supper or a late-night comfort meal..</em></font>
         <i><h2>Ingredients</h2>
