--- a/recipes/PotatoAuGratin.html
+++ b/recipes/PotatoAuGratin.html
@@ -7,7 +7,7 @@
     <body bgcolor="e5e6e6">
         <font size="6">------------------Au Gratin Potatoes------------------</font>
         <br>
-        <img src="https://pixabay.com/get/gdc5130b6594596eb4331d704ab19ac59159bcc1047ca4c58b27c229f17a4ed3f4cfaddc3b1c9bd2ee1149a0c0b5f6b0c2460da5512e8c5391aff9b6d47f183aff792b71ead37902b5532385d40f81d5d_640.png?attachment=" width="628" alt="A pan filled with creamy Au Gratin Potatoes">
+        <img src="https://cdn.pixabay.com/photo/2024/10/04/17/49/ai-generated-9097131_960_720.png" width="628" alt="A pan filled with creamy Au Gratin Potatoes">
         <br><br>
         <font size=5><em>Rich layers of soft potatoes coated in a velvety cheese sauce make this classic French dish irresistible.</em></font>
         <i><h2>Ingredients</h2>
